--- a/frontend/src/nav.css
+++ b/frontend/src/nav.css
@@ -147,3 +147,45 @@ border-radius: 5rem !important;
 height:5rem;
 width: 100%;
 }
+
+.btn-touch {
+  background-color: #d64b01 !important;
+  border: 2px solid #ea580c;
+  transition: all 0.3s ease;
+}
+
+.btn-touch:hover {
+  animation: glow 1.5s  infinite alternate;
+  transform: scale(1.03);
+}
+
+@keyframes glow {
+    from{
+  box-shadow: 0 0 5px #ea580c, 0 0 10px #ea580c;
+    } to {
+  box-shadow: 0 0 20px #ff7b1a, 0 0 50px #ff7b1a;   
+    }
+}
+
+.socials-child  a{
+    text-decoration: none ;
+
+color: black;
+  
+
+}
+input {
+    padding: 10px 15px ;
+    border: none;
+
+    border-radius: 5rem;
+}
+
+textarea{
+     border: 2px solid black;
+}
+
+textarea:focus {
+  outline: none;
+  box-shadow: 2px 2px 10px red;
+}
